fix(page): adjust the elements sizes in the visitedAccomodation  grid in the Accomodation page. Prevents elements' spacing issues because of the Collapse's animation triggering.

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -12,6 +12,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
 
     &__title {
         color: #FFFFFF;
