--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,7 +1,7 @@
 .collapse {
 
     width: 75%;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
 
 
     &__header {
